[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Hero.tscn" type="PackedScene" id=1]
[ext_resource path="res://DungeonMap.gd" type="Script" id=2]
[ext_resource path="res://Sprites/tile_grass_v01bs.png" type="Texture" id=3]
[ext_resource path="res://Sprites/0x72_16x16DungeonTileset.v3.png" type="Texture" id=4]
[ext_resource path="res://Enemies/FemaleWizard/Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://AbilityBox.png" type="Texture" id=6]
[ext_resource path="res://swords-emblem.svg" type="Texture" id=7]
[ext_resource path="res://AbilityButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player/GUI.gd" type="Script" id=9]
[ext_resource path="res://ExperienceBar.tscn" type="PackedScene" id=10]
[ext_resource path="res://PopupDialog.gd" type="Script" id=11]
[ext_resource path="res://GUI.gd" type="Script" id=13]

[sub_resource type="TileSet" id=1]
0/name = "0x72_16x16DungeonTileset.v3.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 96, 64, 48 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 2, 0 ), 504, Vector2( 2, 1 ), 511, Vector2( 2, 2 ), 63, Vector2( 3, 0 ), 216, Vector2( 3, 1 ), 219, Vector2( 3, 2 ), 27 ]
0/autotile/icon_coordinate = Vector2( 1, 1 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="BitmapFont" id=2]

[node name="DungeonMap" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( -307.892, -210.705 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 620, 360 )
region_filter_clip = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -851967, 0, 65537, -786432, 0, 65537, -786431, 0, 65537, -720896, 0, 65537, -720895, 0, 65537, -589825, 0, 65537, -655360, 0, 65537, -655359, 0, 65537, -524289, 0, 65537, -589824, 0, 65537, -458754, 0, 65537, -458753, 0, 65537, -524288, 0, 65537, -393218, 0, 65537, -393217, 0, 65537, -327684, 0, 0, -327683, 0, 2, -327682, 0, 65537, -327681, 0, 65537, -262148, 0, 65536, -262147, 0, 65538, -262146, 0, 65539, -196613, 0, 0, -196612, 0, 65537, -196611, 0, 131073, -196610, 0, 131075, -131078, 0, 0, -131077, 0, 65537, -131076, 0, 65539, -65543, 0, 0, -65542, 0, 65537, -65541, 0, 65537, -65540, 0, 65539, -8, 0, 0, -7, 0, 65537, -6, 0, 65537, -5, 0, 65537, -4, 0, 131075, 65527, 0, 0, 65528, 0, 65537, 65529, 0, 65537, 65530, 0, 65537, 65531, 0, 131075, 131062, 0, 0, 131063, 0, 65537, 131064, 0, 65537, 131065, 0, 65537, 131066, 0, 131075, 196598, 0, 131072, 196599, 0, 131073, 196600, 0, 65537, 196601, 0, 131075, 262136, 0, 65537 )

[node name="YSort" type="YSort" parent="."]

[node name="RedWizard" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 132.143, -124.592 )

[node name="Hero" parent="YSort" instance=ExtResource( 1 )]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/Hero"]
remote_path = NodePath("../../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
smoothing_enabled = true

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 13 )

[node name="ExperienceBar" parent="GUI" instance=ExtResource( 10 )]

[node name="SkillBar" type="Control" parent="GUI"]
margin_left = 190.0
margin_top = 250.0
margin_right = 366.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="GUI/SkillBar"]
margin_right = 491.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/SkillBar/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityButton1" parent="GUI/SkillBar/Background/HBoxContainer" instance=ExtResource( 8 )]
position = Vector2( 8, 8 )
scale = Vector2( 0.05, 0.05 )

[node name="AbilityButton" parent="GUI/SkillBar/Background/HBoxContainer/AbilityButton1" index="0" groups=[
"UiButtons",
]]
texture_normal = ExtResource( 7 )
on_the_gcd = false

[node name="Counter" parent="GUI/SkillBar/Background/HBoxContainer/AbilityButton1/AbilityButton" index="2"]
margin_bottom = 1.0

[node name="Value" parent="GUI/SkillBar/Background/HBoxContainer/AbilityButton1/AbilityButton/Counter" index="0"]
custom_fonts/font = SubResource( 2 )

[node name="AbilityButton2" parent="GUI/SkillBar/Background/HBoxContainer" instance=ExtResource( 8 )]
position = Vector2( 49, 8 )
scale = Vector2( 0.05, 0.05 )

[node name="AbilityButton" parent="GUI/SkillBar/Background/HBoxContainer/AbilityButton2" index="0" groups=[
"UiButtons",
]]

[node name="Counter" parent="GUI/SkillBar/Background/HBoxContainer/AbilityButton2/AbilityButton" index="2"]
margin_bottom = 1.0

[node name="Value" parent="GUI/SkillBar/Background/HBoxContainer/AbilityButton2/AbilityButton/Counter" index="0"]
custom_fonts/font = SubResource( 2 )

[node name="AbilityButton3" parent="GUI/SkillBar/Background/HBoxContainer" instance=ExtResource( 8 )]
position = Vector2( 90, 8 )
scale = Vector2( 0.05, 0.05 )

[node name="AbilityButton" parent="GUI/SkillBar/Background/HBoxContainer/AbilityButton3" index="0" groups=[
"UiButtons",
]]

[node name="GcdSweep" parent="GUI/SkillBar/Background/HBoxContainer/AbilityButton3/AbilityButton" index="1"]
margin_left = 4.0
margin_top = 1.25995
margin_right = 4.0
margin_bottom = 1.25995

[node name="Counter" parent="GUI/SkillBar/Background/HBoxContainer/AbilityButton3/AbilityButton" index="2"]
margin_bottom = 1.0

[node name="Value" parent="GUI/SkillBar/Background/HBoxContainer/AbilityButton3/AbilityButton/Counter" index="0"]
mouse_filter = 1

[node name="CharStats" type="PopupDialog" parent="GUI"]
margin_left = -297.452
margin_top = -172.859
margin_right = -77.4524
margin_bottom = -68.8592
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/CharStats"]
margin_left = 15.7145
margin_top = 16.8369
margin_right = 55.7145
margin_bottom = 30.8369
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="abilityUsed" from="GUI/SkillBar" to="YSort/Hero" method="_on_SkillBar_abilityUsed"]
[connection signal="about_to_show" from="GUI/CharStats" to="GUI/CharStats" method="_on_PopupDialog_about_to_show"]

[editable path="GUI/SkillBar/Background/HBoxContainer/AbilityButton1"]
[editable path="GUI/SkillBar/Background/HBoxContainer/AbilityButton2"]
[editable path="GUI/SkillBar/Background/HBoxContainer/AbilityButton3"]
